Fixed floating callouts z-index

--- a/src/Callouts/styles.css
+++ b/src/Callouts/styles.css
@@ -3,6 +3,7 @@
   top: 10px;
   right: 10px;
   overflow-y: auto;
+  z-index: 700;
   width: 360px;
 }
 
